<resources>
    <string name="app_name">口袋快爆</string>
    <string name="app_introduction">实 惠 多 到 爆</string>
    <string name="app_version">当前版本v%1$s</string>

    <string-array name="tab_bottom_array">
        <item>精选</item>
        <item>优惠快爆</item>
        <item>分类直播</item>
        <item>我的</item>
    </string-array>

    <string name="tx_setting">推送设置</string>
    <string name="tx_about_us">联系我们</string>
    <string name="tx_check_update">检查更新</string>
    <string name="tx_share_to_friends">分享APP</string>
    <string name="tx_feedback">意见反馈</string>
    <string name="tx_encourage_us">给我鼓励</string>
    <string name="tx_attention_us">关注我们</string>
    <string name="tx_clear">清理缓存</string>
    <string name="tx_login">登录</string>
    <string name="tx_logout">退出登录</string>
    <string name="tx_back">返回</string>
    <string name="tx_cancel">取 消</string>
    <string name="tx_lost_password">忘记密码</string>
    <string name="tx_hint_password">请输入登录密码</string>
    <string name="toast_error_password_verify_error">两次新密码输入不相同</string>
    <string name="tx_hint_phone">请输入手机号码</string>
    <string name="tx_hint_invite_phone">请输入邀请人手机号码(选填)</string>
    <string name="tx_hint_sms">请输入验证码</string>
    <string name="tx_register">注册</string>
    <string name="tx_register_new">注册新用户</string>
    <string name="network_tips">您已进入没有网络的异次元,请检查您的网络!</string>
    <string name="toast_error_phone_null">手机号不能为空</string>
    <string name="toast_error_phone_error">手机号格式不正确</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_password_error">密码长度不正确，请输入6–16位</string>
    <string name="toast_error_sms_null">验证码不能为空</string>
    <string name="account_center_account">账户</string>
    <string name="account_center_key_login">修改登录密码</string>
    <string name="shake_times">您今天还可以摇%1$d次</string>
    <string name="countdown_number"> 发送中..%1$d秒 </string>
    <string name="tx_hint_nickname">请输入昵称</string>
    <string name="tx_hint_old_password">请输入原始密码</string>
    <string name="tx_hint_new_password">请输入新密码</string>
    <string name="tx_hint_verify_password">请确认新密码</string>
    <string name="tx_credit_vip_up">口袋币:%1$d   距下一等级差:%2$d</string>
    <string name="tx_quiet_period">从%1$s：%2$s到%3$s：%4$s</string>

    <string name="tx_money_def_0">0.00</string>
    <string name="tx_not_set">未设置</string>
    <string name="tx_phone_def">170****0000</string>
    <string name="tx_self_bg">自定义背景</string>
    <string name="tx_total_credits">总口袋币</string>
    <string name="tx_time_def">1970–01–01</string>
    <string name="tx_share">分享</string>
    <string name="tx_buy">前往购买</string>
    <string name="tx_number_def">0</string>
    <string name="tx_more_"><![CDATA[更多>]]></string>
    <string name="tx_sign_in">签到</string>
    <string name="tx_no_data">暂无数据，轻触屏幕刷新</string>
    <string name="tx_no_data_search">暂无数据，轻触屏幕\n私聊客服索要想要的商品</string>
    <string name="tx_no_network">无网络信号</string>
    <string name="tx_reload">轻触屏幕刷新</string>
    <string name="tx_quiet_time">安静时段</string>
    <string name="tx_get">领优惠券</string>
    <string name="sign_in_out">签到领口袋币</string>
    <string name="tx_province_flow">省流量模式</string>
    <string name="tx_nickname">昵称</string>
    <string-array name="item_mall_array">
        <item> 今日新品 </item>
        <item> 超级人气榜 </item>
        <item> 特卖精选 </item>
    </string-array>
    <!--<string-array name="library_array">-->
    <!--<item> 主题街区 </item>-->
    <!--<item> 好货福利 </item>-->
    <!--<item> 到点改价 </item>-->
    <!--</string-array>-->
    <string-array name="item_type_array">
        <item> 服装 </item>
        <item> 母婴 </item>
        <item> 化妆品 </item>
        <item> 居家 </item>
        <item> 鞋包配饰 </item>
        <item> 美食 </item>
        <item> 文体车品 </item>
        <item> 数码家电 </item>
    </string-array>
    <!--<string-array name="item_tqg_array">-->
    <!--<item> 00:00 </item>-->
    <!--<item> 09:00 </item>-->
    <!--<item> 15:00 </item>-->
    <!--<item> 20:00 </item>-->
    <!--</string-array>-->
    <!--<string-array name="item_search_array">-->
    <!--<item> 口袋快爆 </item>-->
    <!--<item> 口袋精选 </item>-->
    <!--</string-array>-->
    <!--<string name="next">下一项</string>-->
    <!--<string name="previous">上一项</string>-->
    <!--<string name="done">完 成</string>-->

    <!--<string name="letter">快递信（限一单 奥克米填写取货号）</string>-->
    <!--<string name="name">收件人姓名</string>-->
    <!--<string name="phone">收件人手机号</string>-->
    <!--<string name="region">宿舍区域（区分北苑和软件园！）</string>-->
    <!--<string name="dormitory">宿舍楼号（如：x号楼 xx区）</string>-->
    <!--<string name="orderId">商品订单编号</string>-->
    <!--<string name="voucherId">快递券编号</string>-->

    <!--<string name="n"><![CDATA[欢迎使用<口袋快取>\n在使用之前，我们有两个问题..]]></string>-->
    <!--<string name="n_n_n"><![CDATA[华信软件学院学生请选择<天津工业大学>\n非口袋快爆购买商品暂停“大件”代取\n暂不支持菜鸟驿站、天猫超市、京东、德邦、EMS、邮政小包免费代取]]></string>-->
    <string name="tx_about">关于与合作</string>
    <string name="get_user_info_error">获取用户失败</string>
    <string name="default_nickname">口袋爆料人</string>
    <string name="refresh_error">更新失败</string>
    <string name="tx_inquiry_logout">您确定退出登录么？</string>
    <string name="logout_prompt">退出提示</string>
    <string name="log_tag">nEdAy</string>
    <string name="pick_from_capture">拍照</string>
    <string name="pick_from_gallery">从相册选择</string>
    <string name="register_error">注册失败:</string>
    <!--<string name="create_express_order_success">提交代取卡片成功</string>-->
    <!--<string name="create_express_order_fail">提交代取卡片失败</string>-->
    <!--<string name="tx_tjgy">天津工业大学</string>-->
    <!--<string name="tx_tjlg">天津理工大学</string>-->
    <!--<string name="tx_tjsf">天津师范大学</string>-->
    <string name="tx_determine">确定</string>
    <!--<string name="exchange_failure">兑换失败：</string>-->
    <!--<string name="exchange_success">兑换成功：</string>-->
    <string name="tx_account">我的账户</string>
    <string name="_120x120.jpg">_120x120.jpg</string>
    <string name="_300x300.jpg">_300x300.jpg</string>
    <string name="tx_taobao">淘宝</string>
    <string name="tx_tianmao">天猫商城</string>
    <string name="_200x200.jpg">_200x200.jpg</string>

</resources>
