<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.neday.bomb.view.HeaderLayout
        android:id="@+id/top_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tx_phone_def"
        android:textColor="@android:color/black"
        android:textSize="20.0sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/rl_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dp"
        android:layout_marginRight="20.0dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <com.neday.bomb.view.ClearEditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="50.0dp"
            android:background="@drawable/bg_edit_text"
            android:drawablePadding="8.0dp"
            android:hint="@string/tx_hint_old_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="@dimen/global_mid_text_size" />

        <com.neday.bomb.view.ClearEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="50.0dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:drawablePadding="8.0dp"
            android:hint="@string/tx_hint_new_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="@dimen/global_mid_text_size" />

        <com.neday.bomb.view.ClearEditText
            android:id="@+id/et_verify_password"
            android:layout_width="match_parent"
            android:layout_height="50.0dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:drawablePadding="8.0dp"
            android:hint="@string/tx_hint_verify_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="@dimen/global_mid_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="登录密码需由6~16位字母和数字组成" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="45.0dp"
        android:layout_marginLeft="20.0dp"
        android:layout_marginRight="20.0dp"
        android:background="@drawable/global_red_click_with_corner_selector"
        android:gravity="center"
        android:text="修  改"
        android:textColor="@android:color/white"
        android:textSize="@dimen/global_big_text_size" />

</LinearLayout>
