<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.neday.bomb.view.HeaderLayout
        android:id="@+id/top_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/rl_avatar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/global_click_selector">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:src="@drawable/acc_avatar" />

        <TextView
            android:id="@+id/tv_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:layout_toRightOf="@+id/iv_avatar"
            android:text="头像"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divide_line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15.0dp"
            android:layout_marginRight="15.0dp"
            android:layout_toRightOf="@+id/iv_avatar"
            android:background="@color/line_color" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dp"
            android:src="@drawable/sc_arrow_right" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/riv_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="4.0dp"
            android:layout_toLeftOf="@+id/imageView18"
            fresco:failureImage="@drawable/icon_error"
            fresco:placeholderImage="@drawable/avatar_default"
            fresco:roundAsCircle="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_nickname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/global_title_banner_height"
        android:background="@drawable/global_click_selector">

        <ImageView
            android:id="@+id/iv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:src="@drawable/acc_nickname" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:layout_toRightOf="@+id/iv_nickname"
            android:text="@string/tx_nickname"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dp"
            android:src="@drawable/sc_arrow_right" />

        <TextView
            android:id="@+id/tv_nickname_real"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="4.0dp"
            android:layout_toLeftOf="@+id/imageView17"
            android:text="@string/tx_not_set"
            android:textColor="@color/label_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/global_title_banner_height"
        android:layout_marginTop="5dp"
        android:background="@drawable/global_click_selector">

        <ImageView
            android:id="@+id/iv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:src="@drawable/acc_user" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:layout_toRightOf="@+id/iv_account"
            android:text="@string/account_center_account"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divide_line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15.0dp"
            android:layout_marginRight="15.0dp"
            android:layout_toRightOf="@+id/iv_account"
            android:background="@color/line_color" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dp"
            android:src="@drawable/sc_arrow_right" />

        <TextView
            android:id="@+id/tv_account_real"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/imageView11"
            android:layout_toStartOf="@+id/imageView11"
            android:text="@string/tx_phone_def"
            android:textColor="@color/label_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_key_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/global_title_banner_height"
        android:background="@drawable/global_click_selector">

        <ImageView
            android:id="@+id/iv_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:src="@drawable/acc_change_key" />

        <TextView
            android:id="@+id/tv_key_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:layout_toRightOf="@+id/iv_key"
            android:text="@string/account_center_key_login"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divide_line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15.0dp"
            android:layout_marginRight="15.0dp"
            android:layout_toRightOf="@+id/iv_key"
            android:background="@color/line_color" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dp"
            android:src="@drawable/sc_arrow_right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_setting_center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/global_title_banner_height"
        android:background="@drawable/global_click_selector">

        <ImageView
            android:id="@+id/iv_setting_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:src="@drawable/acc_setting_center" />

        <TextView
            android:id="@+id/tv_setting_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:layout_toRightOf="@+id/iv_setting_center"
            android:text="@string/tx_setting"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dp"
            android:src="@drawable/sc_arrow_right" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_change_skin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/global_title_banner_height"
        android:layout_marginTop="5dp"
        android:background="@drawable/global_click_selector">

        <ImageView
            android:id="@+id/iv_change_skin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:src="@drawable/acc_change_skin" />

        <TextView
            android:id="@+id/tv_change_skin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:layout_toRightOf="@+id/iv_change_skin"
            android:text="@string/tx_self_bg"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dp"
            android:src="@drawable/sc_arrow_right" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divide_line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15.0dp"
            android:layout_marginRight="15.0dp"
            android:layout_toRightOf="@+id/iv_change_skin"
            android:background="@color/line_color" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_province_flow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/global_title_banner_height"
        android:background="@drawable/global_click_selector">

        <ImageView
            android:id="@+id/iv_province_flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:src="@drawable/acc_province_flow" />

        <TextView
            android:id="@+id/tv_province_flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:layout_toRightOf="@+id/iv_province_flow"
            android:text="@string/tx_province_flow"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/iv_open_province_flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dp"
            android:background="@drawable/ic_open"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/iv_close_province_flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dp"
            android:background="@drawable/ic_close"
            android:visibility="visible" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/divide_line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15.0dp"
            android:layout_marginRight="15.0dp"
            android:layout_toRightOf="@+id/iv_province_flow"
            android:background="@color/line_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/global_title_banner_height"
        android:background="@drawable/global_click_selector">

        <ImageView
            android:id="@+id/update_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:src="@drawable/acc_update" />

        <TextView
            android:id="@+id/update_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:layout_toRightOf="@+id/update_image"
            android:text="@string/tx_check_update"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/curVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="4.0dp"
            android:layout_toLeftOf="@+id/imageView5"
            android:text="@string/app_version"
            android:textColor="@color/label_color"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dp"
            android:src="@drawable/sc_arrow_right" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divide_line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15.0dp"
            android:layout_marginRight="15.0dp"
            android:layout_toRightOf="@+id/update_image"
            android:background="@color/line_color" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_clear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/global_title_banner_height"
        android:background="@drawable/global_click_selector">

        <ImageView
            android:id="@+id/clear_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:src="@drawable/acc_clear" />

        <TextView
            android:id="@+id/clear_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dp"
            android:layout_toRightOf="@+id/clear_image"
            android:text="@string/tx_clear"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/cacheSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="4.0dp"
            android:layout_toLeftOf="@+id/imageView9"
            android:textColor="@color/label_color" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dp"
            android:src="@drawable/sc_arrow_right" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_btn_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/global_title_banner_height"
        android:layout_margin="15dp"
        android:background="@drawable/global_red_click_with_corner_selector"
        android:gravity="center"
        android:text="@string/tx_logout"
        android:textColor="@android:color/white"
        android:textSize="@dimen/global_big_text_size" />
</LinearLayout>
